[gd_scene load_steps=6 format=3 uid="uid://de0qx38iy7if7"]

[ext_resource type="Script" path="res://Scenes/Menu_For_Android.gd" id="1_pvd0f"]
[ext_resource type="Texture2D" uid="uid://c4yr0bnwnsud6" path="res://arts/Board.png" id="1_r3qar"]
[ext_resource type="Texture2D" uid="uid://cqytlrv6borhn" path="res://arts/Reset.png" id="2_w5brw"]
[ext_resource type="Texture2D" uid="uid://c3cjlm2lnu6xb" path="res://arts/Main Menu.png" id="3_lyu5r"]
[ext_resource type="Texture2D" uid="uid://bt6jchtkguifs" path="res://arts/Back.png" id="4_f2qnf"]

[node name="MenuForAndroid" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pvd0f")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_r3qar")

[node name="Reset" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(585, 285)
scale = Vector2(15, 15)
texture_normal = ExtResource("2_w5brw")
texture_pressed = ExtResource("2_w5brw")

[node name="Main Menu" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(585, 465)
scale = Vector2(15, 15)
texture_normal = ExtResource("3_lyu5r")
texture_pressed = ExtResource("3_lyu5r")

[node name="Back" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(585, 645)
scale = Vector2(15, 15)
texture_normal = ExtResource("4_f2qnf")
texture_pressed = ExtResource("4_f2qnf")

[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
